testsuite/tests/typecheck/should_fail/tcfail032.stderr

tcfail032.hs:14:8: error:
    Couldn't match expected type ‘a -> Int’ with actual type ‘t0’
      because type variable ‘a’ would escape its scope
    This (rigid, skolem) type variable is bound by
      an expression type signature: Eq a => a -> Int
      at tcfail032.hs:14:8-30
    Relevant bindings include
      x :: t0 (bound at tcfail032.hs:14:3)
      f :: t0 -> a0 -> Int (bound at tcfail032.hs:14:1)
    In the expression: (x :: (Eq a) => a -> Int)
    In an equation for ‘f’: f x = (x :: (Eq a) => a -> Int)
